# rust-ray-tracer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
examples/: 1.ppm
src/: camera.rs  hittable.rs  image.rs  main.rs  material.rs  model.rs  ray.rs  scene.rs  util.rs  viewport.rs
