[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.6"
cgmath = "0.18.0"
rand = "0.8.5"
rayon = "1.7.0"
image = "0.24.7"
clap = { version = "4.3.24", features = ["derive"] }
